[gd_scene load_steps=15 format=2]

[ext_resource path="res://particles/Pause/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/texture/layer_background.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/font/subjectivity/Subjectivity-ExtraBold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/GUI/texture/button_continue.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/texture/button_settings.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/texture/button_help.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/texture/button_main-menu.png" type="Texture" id=7]
[ext_resource path="res://particles/Settings/SettingsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://particles/Instruction/Instruction.tscn" type="PackedScene" id=9]
[ext_resource path="res://particles/ConfirmBox/ConfirmBox.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
extra_spacing_top = 10
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "close_pause_menu"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset_state"
} ]
}

[sub_resource type="Animation" id=3]

resource_name = "open_pause_menu"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "init"
} ]
}

[sub_resource type="GDScript" id=4]

script/source = "extends Container

func _ready():
	hide()
	#open_box()
	$CancelBtn.connect(\"pressed\", self, \"close_box\")
	$BtnContainer/Confirm.connect(\"pressed\", self, \"confirm\")
	$BtnContainer/Cancel.connect(\"pressed\", self, \"close_box\")
	
func open_box():
	$BoxAnim.play(\"open_box\")
	self.show()
	pass
	
func confirm():
	$BoxAnim.play(\"close_box\")
	get_tree().paused = false
	self.hide()
	#TODO
	#go to main menu
	#save game
	pass
	
func close_box():
	$BoxAnim.play(\"close_box\")
	global.player.playerMovable = true
	get_tree().paused = false
	self.hide()
	pass

"

[node name="PauseMenu" type="Container" index="0"]

pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -250.0
margin_right = 150.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 500 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Rect", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="Pause" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Background" type="Sprite" parent="Pause" index="0"]

modulate = Color( 0.219608, 0.207843, 0.207843, 0.482353 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 300, 500 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]

[node name="Menu" type="VBoxContainer" parent="Pause" index="1"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Pause" ]

[node name="MenuTitle" type="Container" parent="Pause/Menu" index="0"]

modulate = Color( 0.949768, 0.956364, 0.964844, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 126.0
rect_min_size = Vector2( 300, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Margin", "Material", "Rect", "Size Flags", "Visibility" ]

[node name="Label" type="Label" parent="Pause/Menu/MenuTitle" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -15.5
margin_right = 82.5
margin_bottom = 15.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933594, 0.900772, 0.900772, 1 )
custom_colors/font_color_shadow = Color( 0.0585938, 0.0428009, 0.0428009, 1 )
text = "PAUSE"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="MenuContainer" type="Container" parent="Pause/Menu" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 130.0
margin_right = 300.0
margin_bottom = 500.0
rect_min_size = Vector2( 300, 370 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 15
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="Continue" type="TextureButton" parent="Pause/Menu/MenuContainer" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_right = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 11
size_flags_vertical = 11
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Size Flags", "Textures" ]

[node name="Settings" type="TextureButton" parent="Pause/Menu/MenuContainer" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 90.0
margin_right = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 11
size_flags_vertical = 11
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Grow Direction", "Margin", "Offset", "Size Flags", "Textures" ]

[node name="Help" type="TextureButton" parent="Pause/Menu/MenuContainer" index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 180.0
margin_right = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="MainMenu" type="TextureButton" parent="Pause/Menu/MenuContainer" index="3"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 270.0
margin_right = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="PauseMenuAnim" type="AnimationPlayer" parent="." index="1"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close_pause_menu = SubResource( 2 )
anims/open_pause_menu = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[node name="SettingsMenu" parent="." index="2" instance=ExtResource( 8 )]

visible = false

[node name="HelpWindow" parent="." index="3" instance=ExtResource( 9 )]

visible = false

[node name="QuitConfirm" parent="." index="4" instance=ExtResource( 10 )]

script = SubResource( 4 )

[connection signal="pressed" from="QuitConfirm/BtnContainer/Confirm" to="." method="_on_Confirm_pressed"]


[editable path="QuitConfirm"]
